WebCore/platform/graphics/BitmapImage.cpp
@@ -75,8 +75,13 @@ void BitmapImage::destroyDecodedData(bool destroyAll)
 {
     int framesCleared = 0;
     const size_t clearBeforeFrame = destroyAll ? m_frames.size() : m_currentFrame;
-    for (size_t i = 0; i < clearBeforeFrame; ++i)
-        framesCleared += clearFrame(i);
+    for (size_t i = 0; i < clearBeforeFrame; ++i) {
+        // The underlying frame isn't actually changing (we're just trying to
+        // save the memory for the framebuffer data), so we don't need to clear
+        // the metadata.
+        if (m_frames[i].clear(false))
+          ++framesCleared;
+    }
 
     destroyMetadataAndNotify(framesCleared);
 
@@ -102,15 +107,6 @@ void BitmapImage::destroyMetadataAndNotify(int framesCleared)
     m_decodedSize += deltaBytes;
     if (deltaBytes && imageObserver())
         imageObserver()->decodedSizeChanged(this, deltaBytes);
-}
-
-int BitmapImage::clearFrame(size_t frame)
-{
-    if (!m_frames[frame].m_frame)
-        return 0;
-
-    m_frames[frame].clear();
-    return 1;
 }
 
 void BitmapImage::cacheFrame(size_t index)
@@ -160,7 +156,9 @@ IntSize BitmapImage::currentFrameSize() const
 
 bool BitmapImage::dataChanged(bool allDataReceived)
 {
-    destroyMetadataAndNotify(m_frames.isEmpty() ? 0 : clearFrame(m_frames.size() - 1));
+    // Because we're modifying the current frame, clear its (now possibly
+    // inaccurate) metadata as well.
+    destroyMetadataAndNotify((!m_frames.isEmpty() && m_frames[m_frames.size() - 1].clear(true)) ? 1 : 0);
     
     // Feed all the data we've seen so far to the image decoder.
     m_allDataReceived = allDataReceived;
