WebCore/platform/graphics/wx/ImageWx.cpp
@@ -52,15 +52,17 @@ namespace WebCore {
 // this is in GraphicsContextWx.cpp
 int getWxCompositingOperation(CompositeOperator op, bool hasAlpha);
 
-void FrameData::clear()
+bool FrameData::clear(bool clearMetadata)
 {
+    if (clearMetadata)
+        m_haveMetadata = false;
+
     if (m_frame) {
         delete m_frame;
         m_frame = 0;
-        // NOTE: We purposefully don't reset metadata here, so that even if we
-        // throw away previously-decoded data, animation loops can still access
-        // properties like frame durations without re-decoding.
+        return true;
     }
+    return false;
 }
 
 // ================================================
